# Space

./: CMakeLists.txt  Space.kdev4
app/: CMakeLists.txt  galaxy.lua  main.cpp
cmake/: FindCEGUI.cmake  FindTinyXML.cmake  FindToLua.cmake  SpaceMacros.cmake
space/: CMakeLists.txt  Doxyfile.in  application.cpp  application.h  application_ogre.cpp  movementmanager.cpp  movementmanager.h  object.cpp  object.h  objecttype.cpp  objecttype.h  scene.cpp  scene.h  space_config.h.in  space_export.h  space_types.h  string.cpp  string.h
space/core/: CMakeLists.txt  application.cpp  application.h  application_ogre.cpp  core_export.h  imovementmanager.cpp  imovementmanager.h  iobject.cpp  iobject.h  iobjectfactory.cpp  iobjectfactory.h  luastate.cpp  luastate.h  objectmanager.cpp  objectmanager.h  rotationmanager.cpp  rotationmanager.h  space_config.h.in  space_core.pkg  string.cpp  string.h  types.h
space/data/: CMakeLists.txt  Star.mesh  StellarMatter.material  box.blend  crop-skybox.sh  earth.material  fade_in.cg  plugins.cfg.in  resources.cfg.in  select.material  space.layout  star.particle
space/data/materials/: fade_out.cg  planet.material  probe.material  select.material  star.material  star.particle
space/data/meshes/: Planet.mesh  Probe.mesh  Probe.mesh.xml
space/data/ui/: space.layout
space/game/: CMakeLists.txt  gamecontroller.cpp  gamecontroller.h  player.cpp  player.h
space/objects/: CMakeLists.txt  asteroidbelt.cpp  asteroidbelt.h  celestialobject.cpp  celestialobject.h  dotsceneloader.cpp  dotsceneloader.h  dotsceneobject.cpp  dotsceneobject.h  planet.cpp  planet.h  ship.cpp  ship.h  star.cpp  star.h
